# skill-scanner

./: .gitignore  Architecture.md  Claude.md  README.md  competitive-analysis-cisco.md  pyproject.toml  vulnerability-report.md
src/skillshield/: __init__.py  cli.py  config.py  exceptions.py
src/skillshield/analyzers/: __init__.py  base.py  llm_analyzer.py  metadata_diff.py  network_analyzer.py  static_rules.py
src/skillshield/parser/: __init__.py  code_extractor.py  models.py  skill_parser.py
src/skillshield/prompts/: __init__.py  analyze_skill.txt
src/skillshield/reporters/: __init__.py  terminal.py
src/skillshield/rules/: __init__.py  default_rules.yaml  engine.py
tests/: conftest.py  test_cli.py  test_config.py  test_llm_analyzer.py  test_metadata_diff.py  test_network_analyzer.py  test_parser.py  test_static_rules.py
tests/fixtures/benign/git-helper/: SKILL.md
tests/fixtures/benign/jq-gh/: SKILL.md
tests/fixtures/benign/markdown-formatter/: SKILL.md
tests/fixtures/benign/process-env/: SKILL.md
tests/fixtures/benign/weather-tool/: SKILL.md
tests/fixtures/malicious/data-exfil/: SKILL.md
tests/fixtures/malicious/prompt-injection/: SKILL.md
tests/fixtures/malicious/rce-payload/: SKILL.md
tests/fixtures/malicious/supporting-script-exfil/: SKILL.md  get_info.py
tests/fixtures/malicious/supporting-script-rce/: SKILL.md  calc.py
