[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillshield"
version = "0.1.0"
description = "Security scanner for AI agent SKILL.md files"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Karim", email = "karim@fabriklabs.com" }]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pyright>=1.1",
    "coverage>=7.0",
]

[project.scripts]
skillshield = "skillshield.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skillshield"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "llm: marks tests that require an Anthropic API key",
]
